@@ -1,8 +1,8 @@
 package it.gov.pagopa.afm.calculator.service;
 
-import com.azure.spring.data.cosmos.core.CosmosTemplate;
 import it.gov.pagopa.afm.calculator.TestUtil;
 import it.gov.pagopa.afm.calculator.entity.PaymentMethod;
+import it.gov.pagopa.afm.calculator.entity.ValidBundle;
 import it.gov.pagopa.afm.calculator.exception.AppError;
 import it.gov.pagopa.afm.calculator.exception.AppException;
 import it.gov.pagopa.afm.calculator.model.PaymentMethodResponse;
@@ -12,7 +12,12 @@ import it.gov.pagopa.afm.calculator.model.paymentmethods.FeeRange;
 import it.gov.pagopa.afm.calculator.model.paymentmethods.PaymentMethodRequest;
 import it.gov.pagopa.afm.calculator.model.paymentmethods.PaymentMethodsResponse;
 import it.gov.pagopa.afm.calculator.model.paymentmethods.SortOrder;
-import it.gov.pagopa.afm.calculator.model.paymentmethods.enums.*;
+import it.gov.pagopa.afm.calculator.model.paymentmethods.enums.Language;
+import it.gov.pagopa.afm.calculator.model.paymentmethods.enums.PaymentMethodDisabledReason;
+import it.gov.pagopa.afm.calculator.model.paymentmethods.enums.PaymentMethodStatus;
+import it.gov.pagopa.afm.calculator.model.paymentmethods.enums.PaymentMethodType;
+import it.gov.pagopa.afm.calculator.model.paymentmethods.enums.SortBy;
+import it.gov.pagopa.afm.calculator.repository.CosmosRepository;
 import it.gov.pagopa.afm.calculator.repository.PaymentMethodRepository;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -31,8 +36,14 @@ import java.util.Map;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyBoolean;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @SpringBootTest
 class PaymentMethodsServiceTest {
@@ -42,14 +53,13 @@ class PaymentMethodsServiceTest {
     PaymentMethodsService paymentMethodsService;
 
     @MockBean
-    CosmosTemplate cosmosTemplate;
-
-    @MockBean
     PaymentMethodRepository paymentMethodRepository;
 
     @MockBean
-    CalculatorService calculatorService;
+    CosmosRepository cosmosRepository;
 
+    @MockBean
+    CalculatorService calculatorService;
 
     @ParameterizedTest
     @CsvSource({
@@ -59,85 +69,76 @@ class PaymentMethodsServiceTest {
             "requests/paymentOptionsSearchNullTransferList.json"
     })
     void searchPaymentMethods_OK(String input) throws IOException {
-        when(paymentMethodRepository
-                .findByTouchpointAndDevice(anyString(), anyString())).thenReturn(List.of(PaymentMethod.builder()
-                .paymentMethodId("PAYPAL")
-                .status(PaymentMethodStatus.ENABLED)
-                .group("PPAL")
-                .paymentMethodTypes(List.of(PaymentMethodType.APP))
-                .target(null)
-                .validityDateFrom(LocalDate.now().minusDays(1))
-                .rangeAmount(FeeRange.builder()
-                        .min(0L)
-                        .max(1000L)
-                        .build())
-                .build()));
-        when(calculatorService.calculateMulti(any(PaymentOptionMulti.class), anyInt(), anyBoolean(), anyBoolean(), anyString()))
-                .thenReturn(it.gov.pagopa.afm.calculator.model.calculatormulti.BundleOption.builder()
-                        .belowThreshold(false)
-                        .bundleOptions(List.of(Transfer.builder().build()))
-                        .build());
+        when(paymentMethodRepository.findByTouchpointAndDevice(anyString(), anyString()))
+                .thenReturn(List.of(enabledPaymentMethod("PAYPAL", "PPAL", PaymentMethodType.APP)));
 
-        PaymentMethodRequest paymentMethodRequest = TestUtil.readObjectFromFile(input, PaymentMethodRequest.class);
+        when(cosmosRepository.findByPaymentOption(any(PaymentOptionMulti.class), anyBoolean()))
+                .thenReturn(List.of(bundleForPaymentType("PPAL")));
 
-        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(paymentMethodRequest);
+        when(calculatorService.calculateForPaymentMethods(
+                anyList(),
+                any(PaymentOptionMulti.class),
+                anyInt(),
+                anyBoolean(),
+                anyString()
+        )).thenReturn(bundleOptionWithFee(10L));
+
+        PaymentMethodRequest request = TestUtil.readObjectFromFile(input, PaymentMethodRequest.class);
+
+        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(request);
+
         assertEquals(1, response.getPaymentMethods().size());
         assertEquals(PaymentMethodStatus.ENABLED, response.getPaymentMethods().get(0).getStatus());
     }
 
     @Test
     void searchPaymentMethods_noUserDevice_OK() throws IOException {
-        when(paymentMethodRepository
-                .findByTouchpoint(anyString())).thenReturn(List.of(PaymentMethod.builder()
-                .paymentMethodId("PAYPAL")
-                .status(PaymentMethodStatus.ENABLED)
-                .group("PPAL")
-                .paymentMethodTypes(List.of(PaymentMethodType.APP))
-                .target(null)
-                .validityDateFrom(LocalDate.now().minusDays(1))
-                .rangeAmount(FeeRange.builder()
-                        .min(0L)
-                        .max(1000L)
-                        .build())
-                .build()));
-        when(calculatorService.calculateMulti(any(PaymentOptionMulti.class), anyInt(), anyBoolean(), anyBoolean(), anyString()))
-                .thenReturn(it.gov.pagopa.afm.calculator.model.calculatormulti.BundleOption.builder()
-                        .belowThreshold(false)
-                        .bundleOptions(List.of(Transfer.builder().build()))
-                        .build());
+        when(paymentMethodRepository.findByTouchpoint(anyString()))
+                .thenReturn(List.of(enabledPaymentMethod("PAYPAL", "PPAL", PaymentMethodType.APP)));
 
-        PaymentMethodRequest paymentMethodRequest = TestUtil.readObjectFromFile("requests/paymentOptionsSearchNoUserDevice.json", PaymentMethodRequest.class);
+        when(cosmosRepository.findByPaymentOption(any(PaymentOptionMulti.class), anyBoolean()))
+                .thenReturn(List.of(bundleForPaymentType("PPAL")));
 
-        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(paymentMethodRequest);
+        when(calculatorService.calculateForPaymentMethods(
+                anyList(),
+                any(PaymentOptionMulti.class),
+                anyInt(),
+                anyBoolean(),
+                anyString()
+        )).thenReturn(bundleOptionWithFee(10L));
+
+        PaymentMethodRequest request =
+                TestUtil.readObjectFromFile("requests/paymentOptionsSearchNoUserDevice.json", PaymentMethodRequest.class);
+
+        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(request);
+
         assertEquals(1, response.getPaymentMethods().size());
         assertEquals(PaymentMethodStatus.ENABLED, response.getPaymentMethods().get(0).getStatus());
     }
 
     @Test
     void searchPaymentMethods_Target() throws IOException {
+        when(paymentMethodRepository.findByTouchpointAndDevice(anyString(), anyString()))
+                .thenReturn(List.of(
+                        PaymentMethod.builder()
+                                .paymentMethodId("PAYPAL")
+                                .status(PaymentMethodStatus.ENABLED)
+                                .group("PPAL")
+                                .paymentMethodTypes(List.of(PaymentMethodType.APP))
+                                .target(List.of("wrongTarget"))
+                                .validityDateFrom(LocalDate.now().minusDays(1))
+                                .rangeAmount(FeeRange.builder().min(0L).max(1000L).build())
+                                .build()
+                ));
 
-        when(calculatorService.calculateMulti(any(PaymentOptionMulti.class), anyInt(), anyBoolean(), anyBoolean(), anyString()))
-                .thenReturn(it.gov.pagopa.afm.calculator.model.calculatormulti.BundleOption.builder()
-                        .belowThreshold(false)
-                        .bundleOptions(List.of(Transfer.builder().build()))
-                        .build());
+        when(cosmosRepository.findByPaymentOption(any(PaymentOptionMulti.class), anyBoolean()))
+                .thenReturn(Collections.emptyList());
 
-        when(paymentMethodRepository
-                .findByTouchpointAndDevice(anyString(), anyString())).thenReturn(List.of(PaymentMethod.builder()
-                .paymentMethodId("PAYPAL")
-                .status(PaymentMethodStatus.ENABLED)
-                .group("PPAL")
-                .paymentMethodTypes(List.of(PaymentMethodType.APP))
-                .target(List.of("wrongTarget"))
-                .validityDateFrom(LocalDate.now().minusDays(1))
-                .rangeAmount(FeeRange.builder()
-                        .min(0L)
-                        .max(1000L)
-                        .build())
-                .build()));
-        PaymentMethodRequest paymentMethodRequest = TestUtil.readObjectFromFile("requests/paymentOptionsSearch.json", PaymentMethodRequest.class);
+        PaymentMethodRequest request =
+                TestUtil.readObjectFromFile("requests/paymentOptionsSearch.json", PaymentMethodRequest.class);
 
-        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(paymentMethodRequest);
+        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(request);
+
         assertEquals(1, response.getPaymentMethods().size());
         assertEquals("PAYPAL", response.getPaymentMethods().get(0).getPaymentMethodId());
         assertEquals(PaymentMethodStatus.DISABLED, response.getPaymentMethods().get(0).getStatus());
@@ -146,29 +147,27 @@ class PaymentMethodsServiceTest {
 
     @Test
     void searchPaymentMethods_Amount() throws IOException {
+        when(paymentMethodRepository.findByTouchpointAndDevice(anyString(), anyString()))
+                .thenReturn(List.of(
+                        PaymentMethod.builder()
+                                .paymentMethodId("PAYPAL")
+                                .status(PaymentMethodStatus.ENABLED)
+                                .group("PPAL")
+                                .paymentMethodTypes(List.of(PaymentMethodType.APP))
+                                .target(List.of("user"))
+                                .validityDateFrom(LocalDate.now().minusDays(1))
+                                .rangeAmount(FeeRange.builder().min(5L).max(1000L).build())
+                                .build()
+                ));
 
-        when(calculatorService.calculateMulti(any(PaymentOptionMulti.class), anyInt(), anyBoolean(), anyBoolean(), anyString()))
-                .thenReturn(it.gov.pagopa.afm.calculator.model.calculatormulti.BundleOption.builder()
-                        .belowThreshold(false)
-                        .bundleOptions(List.of(Transfer.builder().build()))
-                        .build());
+        when(cosmosRepository.findByPaymentOption(any(PaymentOptionMulti.class), anyBoolean()))
+                .thenReturn(Collections.emptyList());
 
-        when(paymentMethodRepository
-                .findByTouchpointAndDevice(anyString(), anyString())).thenReturn(List.of(PaymentMethod.builder()
-                .paymentMethodId("PAYPAL")
-                .status(PaymentMethodStatus.ENABLED)
-                .group("PPAL")
-                .paymentMethodTypes(List.of(PaymentMethodType.APP))
-                .target(List.of("user"))
-                .validityDateFrom(LocalDate.now().minusDays(1))
-                .rangeAmount(FeeRange.builder()
-                        .min(5L)
-                        .max(1000L)
-                        .build())
-                .build()));
-        PaymentMethodRequest paymentMethodRequest = TestUtil.readObjectFromFile("requests/paymentOptionsSearch.json", PaymentMethodRequest.class);
+        PaymentMethodRequest request =
+                TestUtil.readObjectFromFile("requests/paymentOptionsSearch.json", PaymentMethodRequest.class);
 
-        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(paymentMethodRequest);
+        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(request);
+
         assertEquals(1, response.getPaymentMethods().size());
         assertEquals("PAYPAL", response.getPaymentMethods().get(0).getPaymentMethodId());
         assertEquals(PaymentMethodStatus.DISABLED, response.getPaymentMethods().get(0).getStatus());
@@ -177,29 +176,27 @@ class PaymentMethodsServiceTest {
 
     @Test
     void searchPaymentMethods_Disabled() throws IOException {
+        when(paymentMethodRepository.findByTouchpointAndDevice(anyString(), anyString()))
+                .thenReturn(List.of(
+                        PaymentMethod.builder()
+                                .paymentMethodId("PAYPAL")
+                                .status(PaymentMethodStatus.DISABLED)
+                                .group("PPAL")
+                                .paymentMethodTypes(List.of(PaymentMethodType.APP))
+                                .target(List.of("user"))
+                                .validityDateFrom(LocalDate.now().minusDays(1))
+                                .rangeAmount(FeeRange.builder().min(0L).max(1000L).build())
+                                .build()
+                ));
 
-        when(calculatorService.calculateMulti(any(PaymentOptionMulti.class), anyInt(), anyBoolean(), anyBoolean(), anyString()))
-                .thenReturn(it.gov.pagopa.afm.calculator.model.calculatormulti.BundleOption.builder()
-                        .belowThreshold(false)
-                        .bundleOptions(List.of(Transfer.builder().build()))
-                        .build());
+        when(cosmosRepository.findByPaymentOption(any(PaymentOptionMulti.class), anyBoolean()))
+                .thenReturn(Collections.emptyList());
 
-        when(paymentMethodRepository
-                .findByTouchpointAndDevice(anyString(), anyString())).thenReturn(List.of(PaymentMethod.builder()
-                .paymentMethodId("PAYPAL")
-                .status(PaymentMethodStatus.DISABLED)
-                .group("PPAL")
-                .paymentMethodTypes(List.of(PaymentMethodType.APP))
-                .target(List.of("user"))
-                .validityDateFrom(LocalDate.now().minusDays(1))
-                .rangeAmount(FeeRange.builder()
-                        .min(0L)
-                        .max(1000L)
-                        .build())
-                .build()));
-        PaymentMethodRequest paymentMethodRequest = TestUtil.readObjectFromFile("requests/paymentOptionsSearch.json", PaymentMethodRequest.class);
+        PaymentMethodRequest request =
+                TestUtil.readObjectFromFile("requests/paymentOptionsSearch.json", PaymentMethodRequest.class);
 
-        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(paymentMethodRequest);
+        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(request);
+
         assertEquals(1, response.getPaymentMethods().size());
         assertEquals("PAYPAL", response.getPaymentMethods().get(0).getPaymentMethodId());
         assertEquals(PaymentMethodStatus.DISABLED, response.getPaymentMethods().get(0).getStatus());
@@ -208,29 +205,27 @@ class PaymentMethodsServiceTest {
 
     @Test
     void searchPaymentMethods_Maintenance() throws IOException {
+        when(paymentMethodRepository.findByTouchpointAndDevice(anyString(), anyString()))
+                .thenReturn(List.of(
+                        PaymentMethod.builder()
+                                .paymentMethodId("PAYPAL")
+                                .status(PaymentMethodStatus.MAINTENANCE)
+                                .group("PPAL")
+                                .paymentMethodTypes(List.of(PaymentMethodType.APP))
+                                .target(List.of("user"))
+                                .validityDateFrom(LocalDate.now().minusDays(1))
+                                .rangeAmount(FeeRange.builder().min(0L).max(1000L).build())
+                                .build()
+                ));
 
-        when(calculatorService.calculateMulti(any(PaymentOptionMulti.class), anyInt(), anyBoolean(), anyBoolean(), anyString()))
-                .thenReturn(it.gov.pagopa.afm.calculator.model.calculatormulti.BundleOption.builder()
-                        .belowThreshold(false)
-                        .bundleOptions(List.of(Transfer.builder().build()))
-                        .build());
+        when(cosmosRepository.findByPaymentOption(any(PaymentOptionMulti.class), anyBoolean()))
+                .thenReturn(Collections.emptyList());
 
-        when(paymentMethodRepository
-                .findByTouchpointAndDevice(anyString(), anyString())).thenReturn(List.of(PaymentMethod.builder()
-                .paymentMethodId("PAYPAL")
-                .status(PaymentMethodStatus.MAINTENANCE)
-                .group("PPAL")
-                .paymentMethodTypes(List.of(PaymentMethodType.APP))
-                .target(List.of("user"))
-                .validityDateFrom(LocalDate.now().minusDays(1))
-                .rangeAmount(FeeRange.builder()
-                        .min(0L)
-                        .max(1000L)
-                        .build())
-                .build()));
-        PaymentMethodRequest paymentMethodRequest = TestUtil.readObjectFromFile("requests/paymentOptionsSearch.json", PaymentMethodRequest.class);
+        PaymentMethodRequest request =
+                TestUtil.readObjectFromFile("requests/paymentOptionsSearch.json", PaymentMethodRequest.class);
 
-        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(paymentMethodRequest);
+        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(request);
+
         assertEquals(1, response.getPaymentMethods().size());
         assertEquals("PAYPAL", response.getPaymentMethods().get(0).getPaymentMethodId());
         assertEquals(PaymentMethodStatus.MAINTENANCE, response.getPaymentMethods().get(0).getStatus());
@@ -256,8 +251,10 @@ class PaymentMethodsServiceTest {
         when(paymentMethodRepository.findByPaymentMethodId("notFound"))
                 .thenReturn(Collections.emptyList());
 
-        AppException ex = assertThrows(AppException.class,
-                () -> paymentMethodsService.getPaymentMethod("notFound"));
+        AppException ex = assertThrows(
+                AppException.class,
+                () -> paymentMethodsService.getPaymentMethod("notFound")
+        );
 
         assertEquals(AppError.PAYMENT_METHOD_NOT_FOUND.httpStatus, ex.getHttpStatus());
     }
@@ -270,13 +267,13 @@ class PaymentMethodsServiceTest {
         when(paymentMethodRepository.findByPaymentMethodId("dup"))
                 .thenReturn(List.of(m1, m2));
 
-        AppException ex = assertThrows(AppException.class,
-                () -> paymentMethodsService.getPaymentMethod("dup"));
+        AppException ex = assertThrows(
+                AppException.class,
+                () -> paymentMethodsService.getPaymentMethod("dup")
+        );
 
         assertEquals(AppError.PAYMENT_METHOD_MULTIPLE_FOUND.httpStatus, ex.getHttpStatus());
     }
-
-
 
     @ParameterizedTest
     @CsvSource({
@@ -284,69 +281,24 @@ class PaymentMethodsServiceTest {
             "requests/paymentOptionsSearchSortingDefault.json"
     })
     void searchPaymentMethods_sorting(String input) throws IOException {
-        PaymentMethod paypal = PaymentMethod.builder()
-                .paymentMethodId("PAYPAL")
-                .description(Map.of(Language.IT, "Paypal", Language.EN, "Paypal"))
-                .status(PaymentMethodStatus.ENABLED)
-                .group("PPAL")
-                .paymentMethodTypes(List.of(PaymentMethodType.APP))
-                .target(null)
-                .validityDateFrom(LocalDate.now().minusDays(1))
-                .rangeAmount(FeeRange.builder()
-                        .min(0L)
-                        .max(1000L)
-                        .build())
-                .build();
-        PaymentMethod google = PaymentMethod.builder()
-                .paymentMethodId("GOOGLEPAY")
-                .description(Map.of(Language.IT, "Google Pay", Language.EN, "Google Pay"))
-                .status(PaymentMethodStatus.ENABLED)
-                .group("GOOG")
-                .paymentMethodTypes(List.of(PaymentMethodType.APP))
-                .target(null)
-                .validityDateFrom(LocalDate.now().minusDays(1))
-                .rangeAmount(FeeRange.builder()
-                        .min(0L)
-                        .max(1000L)
-                        .build())
-                .build();
-        PaymentMethod banca = PaymentMethod.builder()
-                .paymentMethodId("BBB")
-                .description(Map.of(Language.IT, "Banca instesa", Language.EN, "intesa bank"))
-                .status(PaymentMethodStatus.ENABLED)
-                .group("RBPS")
-                .paymentMethodTypes(List.of(PaymentMethodType.CONTO))
-                .target(null)
-                .validityDateFrom(LocalDate.now().minusDays(1))
-                .rangeAmount(FeeRange.builder()
-                        .min(0L)
-                        .max(1000L)
-                        .build())
-                .build();
-        PaymentMethod cart = PaymentMethod.builder()
-                .paymentMethodId("CART")
-                .description(Map.of(Language.IT, "Carte", Language.EN, "Cards"))
-                .status(PaymentMethodStatus.ENABLED)
-                .group("CP")
-                .paymentMethodTypes(List.of(PaymentMethodType.CARTE))
-                .target(null)
-                .validityDateFrom(LocalDate.now().minusDays(1))
-                .rangeAmount(FeeRange.builder()
-                        .min(0L)
-                        .max(1000L)
-                        .build())
-                .build();
-        when(paymentMethodRepository
-                .findByTouchpointAndDevice(anyString(), anyString())).thenReturn(List.of(paypal, google, banca, cart));
-        when(calculatorService.calculateMulti(any(PaymentOptionMulti.class), anyInt(), anyBoolean(), anyBoolean(), anyString()))
-                .thenReturn(it.gov.pagopa.afm.calculator.model.calculatormulti.BundleOption.builder()
-                        .belowThreshold(false)
-                        .bundleOptions(List.of(Transfer.builder().build()))
-                        .build());
+        when(paymentMethodRepository.findByTouchpointAndDevice(anyString(), anyString()))
+                .thenReturn(getMethodList());
 
-        PaymentMethodRequest paymentMethodRequest = TestUtil.readObjectFromFile(input, PaymentMethodRequest.class);
+        when(cosmosRepository.findByPaymentOption(any(PaymentOptionMulti.class), anyBoolean()))
+                .thenReturn(allBundlesForSorting());
 
-        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(paymentMethodRequest);
+        when(calculatorService.calculateForPaymentMethods(
+                anyList(),
+                any(PaymentOptionMulti.class),
+                anyInt(),
+                anyBoolean(),
+                anyString()
+        )).thenReturn(bundleOptionWithFee(10L));
+
+        PaymentMethodRequest request = TestUtil.readObjectFromFile(input, PaymentMethodRequest.class);
+
+        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(request);
+
         assertEquals(4, response.getPaymentMethods().size());
         assertEquals(PaymentMethodStatus.ENABLED, response.getPaymentMethods().get(0).getStatus());
         assertEquals("CART", response.getPaymentMethods().get(0).getPaymentMethodId());
@@ -360,20 +312,26 @@ class PaymentMethodsServiceTest {
             "requests/paymentOptionsSearchSorting.json"
     })
     void searchPaymentMethods_sortingAsc(String input) throws IOException {
+        when(paymentMethodRepository.findByTouchpointAndDevice(anyString(), anyString()))
+                .thenReturn(getMethodList());
 
-        when(paymentMethodRepository
-                .findByTouchpointAndDevice(anyString(), anyString())).thenReturn(getMethodList());
-        when(calculatorService.calculateMulti(any(PaymentOptionMulti.class), anyInt(), anyBoolean(), anyBoolean(), anyString()))
-                .thenReturn(it.gov.pagopa.afm.calculator.model.calculatormulti.BundleOption.builder()
-                        .belowThreshold(false)
-                        .bundleOptions(List.of(Transfer.builder().build()))
-                        .build());
+        when(cosmosRepository.findByPaymentOption(any(PaymentOptionMulti.class), anyBoolean()))
+                .thenReturn(allBundlesForSorting());
 
-        PaymentMethodRequest paymentMethodRequest = TestUtil.readObjectFromFile(input, PaymentMethodRequest.class);
-        paymentMethodRequest.setSortOrder(SortOrder.ASC);
-        paymentMethodRequest.setPriorityGroups(List.of("PPAL", "CP"));
+        when(calculatorService.calculateForPaymentMethods(
+                anyList(),
+                any(PaymentOptionMulti.class),
+                anyInt(),
+                anyBoolean(),
+                anyString()
+        )).thenReturn(bundleOptionWithFee(10L));
 
-        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(paymentMethodRequest);
+        PaymentMethodRequest request = TestUtil.readObjectFromFile(input, PaymentMethodRequest.class);
+        request.setSortOrder(SortOrder.ASC);
+        request.setPriorityGroups(List.of("PPAL", "CP"));
+
+        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(request);
+
         assertEquals(4, response.getPaymentMethods().size());
         assertEquals(PaymentMethodStatus.ENABLED, response.getPaymentMethods().get(0).getStatus());
         assertEquals("PAYPAL", response.getPaymentMethods().get(0).getPaymentMethodId());
@@ -382,25 +340,31 @@ class PaymentMethodsServiceTest {
         assertEquals("GOOGLEPAY", response.getPaymentMethods().get(3).getPaymentMethodId());
     }
 
-
     @ParameterizedTest
     @CsvSource({
             "requests/paymentOptionsSearchSorting.json"
     })
     void searchPaymentMethods_sortingDesc(String input) throws IOException {
-        when(paymentMethodRepository
-                .findByTouchpointAndDevice(anyString(), anyString())).thenReturn(getMethodList());
-        when(calculatorService.calculateMulti(any(PaymentOptionMulti.class), anyInt(), anyBoolean(), anyBoolean(), anyString()))
-                .thenReturn(it.gov.pagopa.afm.calculator.model.calculatormulti.BundleOption.builder()
-                        .belowThreshold(false)
-                        .bundleOptions(List.of(Transfer.builder().build()))
-                        .build());
+        when(paymentMethodRepository.findByTouchpointAndDevice(anyString(), anyString()))
+                .thenReturn(getMethodList());
 
-        PaymentMethodRequest paymentMethodRequest = TestUtil.readObjectFromFile(input, PaymentMethodRequest.class);
-        paymentMethodRequest.setSortOrder(SortOrder.DESC);
-        paymentMethodRequest.setPriorityGroups(List.of("PPAL", "CP"));
+        when(cosmosRepository.findByPaymentOption(any(PaymentOptionMulti.class), anyBoolean()))
+                .thenReturn(allBundlesForSorting());
 
-        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(paymentMethodRequest);
+        when(calculatorService.calculateForPaymentMethods(
+                anyList(),
+                any(PaymentOptionMulti.class),
+                anyInt(),
+                anyBoolean(),
+                anyString()
+        )).thenReturn(bundleOptionWithFee(10L));
+
+        PaymentMethodRequest request = TestUtil.readObjectFromFile(input, PaymentMethodRequest.class);
+        request.setSortOrder(SortOrder.DESC);
+        request.setPriorityGroups(List.of("PPAL", "CP"));
+
+        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(request);
+
         assertEquals(4, response.getPaymentMethods().size());
         assertEquals(PaymentMethodStatus.ENABLED, response.getPaymentMethods().get(0).getStatus());
         assertEquals("PAYPAL", response.getPaymentMethods().get(0).getPaymentMethodId());
@@ -414,18 +378,25 @@ class PaymentMethodsServiceTest {
             "requests/paymentOptionsSearchSorting.json"
     })
     void searchPaymentMethods_sortingName(String input) throws IOException {
-        when(paymentMethodRepository
-                .findByTouchpointAndDevice(anyString(), anyString())).thenReturn(getMethodList());
-        when(calculatorService.calculateMulti(any(PaymentOptionMulti.class), anyInt(), anyBoolean(), anyBoolean(), anyString()))
-                .thenReturn(it.gov.pagopa.afm.calculator.model.calculatormulti.BundleOption.builder()
-                        .belowThreshold(false)
-                        .bundleOptions(List.of(Transfer.builder().build()))
-                        .build());
+        when(paymentMethodRepository.findByTouchpointAndDevice(anyString(), anyString()))
+                .thenReturn(getMethodList());
 
-        PaymentMethodRequest paymentMethodRequest = TestUtil.readObjectFromFile(input, PaymentMethodRequest.class);
-        paymentMethodRequest.setSortBy(SortBy.NAME);
+        when(cosmosRepository.findByPaymentOption(any(PaymentOptionMulti.class), anyBoolean()))
+                .thenReturn(allBundlesForSorting());
 
-        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(paymentMethodRequest);
+        when(calculatorService.calculateForPaymentMethods(
+                anyList(),
+                any(PaymentOptionMulti.class),
+                anyInt(),
+                anyBoolean(),
+                anyString()
+        )).thenReturn(bundleOptionWithFee(10L));
+
+        PaymentMethodRequest request = TestUtil.readObjectFromFile(input, PaymentMethodRequest.class);
+        request.setSortBy(SortBy.NAME);
+
+        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(request);
+
         assertEquals(4, response.getPaymentMethods().size());
         assertEquals("CART", response.getPaymentMethods().get(0).getPaymentMethodId());
         assertEquals("BBB", response.getPaymentMethods().get(1).getPaymentMethodId());
@@ -433,27 +404,30 @@ class PaymentMethodsServiceTest {
         assertEquals("PAYPAL", response.getPaymentMethods().get(3).getPaymentMethodId());
     }
 
-
-
     @ParameterizedTest
     @CsvSource({
             "requests/paymentOptionsSearchSorting.json"
     })
     void searchPaymentMethods_sortingFee(String input) throws IOException {
-        when(paymentMethodRepository
-                .findByTouchpointAndDevice(anyString(), anyString())).thenReturn(getMethodList());
-        when(calculatorService.calculateMulti(any(PaymentOptionMulti.class), anyInt(), anyBoolean(), anyBoolean(), anyString()))
-                .thenReturn(it.gov.pagopa.afm.calculator.model.calculatormulti.BundleOption.builder()
-                        .belowThreshold(false)
-                        .bundleOptions(List.of(Transfer.builder()
-                                        .taxPayerFee(10L)
-                                .build()))
-                        .build());
+        when(paymentMethodRepository.findByTouchpointAndDevice(anyString(), anyString()))
+                .thenReturn(getMethodList());
 
-        PaymentMethodRequest paymentMethodRequest = TestUtil.readObjectFromFile(input, PaymentMethodRequest.class);
-        paymentMethodRequest.setSortBy(SortBy.FEE);
+        when(cosmosRepository.findByPaymentOption(any(PaymentOptionMulti.class), anyBoolean()))
+                .thenReturn(allBundlesForSorting());
 
-        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(paymentMethodRequest);
+        when(calculatorService.calculateForPaymentMethods(
+                anyList(),
+                any(PaymentOptionMulti.class),
+                anyInt(),
+                anyBoolean(),
+                anyString()
+        )).thenReturn(bundleOptionWithFee(10L));
+
+        PaymentMethodRequest request = TestUtil.readObjectFromFile(input, PaymentMethodRequest.class);
+        request.setSortBy(SortBy.FEE);
+
+        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(request);
+
         assertEquals(4, response.getPaymentMethods().size());
         assertEquals("CART", response.getPaymentMethods().get(0).getPaymentMethodId());
         assertEquals("PAYPAL", response.getPaymentMethods().get(1).getPaymentMethodId());
@@ -461,7 +435,125 @@ class PaymentMethodsServiceTest {
         assertEquals("BBB", response.getPaymentMethods().get(3).getPaymentMethodId());
     }
 
+    @Test
+    void searchPaymentMethods_allCcpNull_shouldUseFalseAndNotThrow() throws IOException {
+        when(paymentMethodRepository.findByTouchpointAndDevice(anyString(), anyString()))
+                .thenReturn(List.of(enabledPaymentMethod("PAYPAL", "PPAL", PaymentMethodType.APP)));
+
+        when(cosmosRepository.findByPaymentOption(any(PaymentOptionMulti.class), eq(false)))
+                .thenReturn(List.of(bundleForPaymentType("PPAL")));
+
+        when(calculatorService.calculateForPaymentMethods(
+                anyList(),
+                any(PaymentOptionMulti.class),
+                anyInt(),
+                anyBoolean(),
+                anyString()
+        )).thenReturn(bundleOptionWithFee(100L));
+
+        PaymentMethodRequest request =
+                TestUtil.readObjectFromFile("requests/paymentOptionsSearch.json", PaymentMethodRequest.class);
+        request.setAllCCp(null);
+
+        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(request);
+
+        assertNotNull(response);
+        assertEquals(1, response.getPaymentMethods().size());
+        assertEquals(PaymentMethodStatus.ENABLED, response.getPaymentMethods().get(0).getStatus());
+
+        verify(cosmosRepository).findByPaymentOption(any(PaymentOptionMulti.class), eq(false));
+    }
+
+    @Test
+    void searchPaymentMethods_allCcpTrue_shouldPassTrueToCosmosRepository() throws IOException {
+        when(paymentMethodRepository.findByTouchpointAndDevice(anyString(), anyString()))
+                .thenReturn(List.of(enabledPaymentMethod("PAYPAL", "PPAL", PaymentMethodType.APP)));
+
+        when(cosmosRepository.findByPaymentOption(any(PaymentOptionMulti.class), eq(true)))
+                .thenReturn(List.of(bundleForPaymentType("PPAL")));
+
+        when(calculatorService.calculateForPaymentMethods(
+                anyList(),
+                any(PaymentOptionMulti.class),
+                anyInt(),
+                anyBoolean(),
+                anyString()
+        )).thenReturn(bundleOptionWithFee(100L));
+
+        PaymentMethodRequest request =
+                TestUtil.readObjectFromFile("requests/paymentOptionsSearch.json", PaymentMethodRequest.class);
+        request.setAllCCp(true);
+
+        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(request);
+
+        assertNotNull(response);
+        assertEquals(1, response.getPaymentMethods().size());
+
+        verify(cosmosRepository).findByPaymentOption(any(PaymentOptionMulti.class), eq(true));
+    }
+
+    @Test
+    void searchPaymentMethods_allCcpFalse_shouldPassFalseToCosmosRepository() throws IOException {
+        when(paymentMethodRepository.findByTouchpointAndDevice(anyString(), anyString()))
+                .thenReturn(List.of(enabledPaymentMethod("PAYPAL", "PPAL", PaymentMethodType.APP)));
+
+        when(cosmosRepository.findByPaymentOption(any(PaymentOptionMulti.class), eq(false)))
+                .thenReturn(List.of(bundleForPaymentType("PPAL")));
+
+        when(calculatorService.calculateForPaymentMethods(
+                anyList(),
+                any(PaymentOptionMulti.class),
+                anyInt(),
+                anyBoolean(),
+                anyString()
+        )).thenReturn(bundleOptionWithFee(100L));
+
+        PaymentMethodRequest request =
+                TestUtil.readObjectFromFile("requests/paymentOptionsSearch.json", PaymentMethodRequest.class);
+        request.setAllCCp(false);
+
+        PaymentMethodsResponse response = paymentMethodsService.searchPaymentMethods(request);
+
+        assertNotNull(response);
+        assertEquals(1, response.getPaymentMethods().size());
+
+        verify(cosmosRepository).findByPaymentOption(any(PaymentOptionMulti.class), eq(false));
+    }
+
+    private static PaymentMethod enabledPaymentMethod(
+            String paymentMethodId,
+            String group,
+            PaymentMethodType type
+    ) {
+        return PaymentMethod.builder()
+                .paymentMethodId(paymentMethodId)
+                .status(PaymentMethodStatus.ENABLED)
+                .group(group)
+                .paymentMethodTypes(List.of(type))
+                .target(null)
+                .validityDateFrom(LocalDate.now().minusDays(1))
+                .rangeAmount(FeeRange.builder().min(0L).max(100000L).build())
+                .build();
+    }
+
+    private static it.gov.pagopa.afm.calculator.model.calculatormulti.BundleOption bundleOptionWithFee(Long fee) {
+        return it.gov.pagopa.afm.calculator.model.calculatormulti.BundleOption.builder()
+                .belowThreshold(false)
+                .bundleOptions(List.of(
+                        Transfer.builder()
+                                .taxPayerFee(fee)
+                                .actualPayerFee(fee)
+                                .build()
+                ))
+                .build();
+    }
+
     private static List<PaymentMethod> getMethodList() {
+        FeeRange validRange = FeeRange.builder()
+                .min(0L)
+                .max(100000L)
+                .build();
+
         PaymentMethod paypal = PaymentMethod.builder()
                 .paymentMethodId("PAYPAL")
                 .name(Map.of(Language.IT, "Paypal", Language.EN, "Paypal"))
@@ -471,11 +563,9 @@ class PaymentMethodsServiceTest {
                 .paymentMethodTypes(List.of(PaymentMethodType.APP))
                 .target(null)
                 .validityDateFrom(LocalDate.now().minusDays(1))
-                .rangeAmount(FeeRange.builder()
-                        .min(0L)
-                        .max(1000L)
-                        .build())
+                .rangeAmount(validRange)
                 .build();
+
         PaymentMethod google = PaymentMethod.builder()
                 .paymentMethodId("GOOGLEPAY")
                 .name(Map.of(Language.IT, "Google Pay"))
@@ -485,11 +575,9 @@ class PaymentMethodsServiceTest {
                 .paymentMethodTypes(List.of(PaymentMethodType.APP))
                 .target(null)
                 .validityDateFrom(LocalDate.now().minusDays(1))
-                .rangeAmount(FeeRange.builder()
-                        .min(1L)
-                        .max(1000L)
-                        .build())
+                .rangeAmount(validRange)
                 .build();
+
         PaymentMethod banca = PaymentMethod.builder()
                 .paymentMethodId("BBB")
                 .name(Map.of(Language.IT, "Banca instesa", Language.EN, "intesa bank"))
@@ -499,11 +587,9 @@ class PaymentMethodsServiceTest {
                 .paymentMethodTypes(List.of(PaymentMethodType.CONTO))
                 .target(null)
                 .validityDateFrom(LocalDate.now().minusDays(1))
-                .rangeAmount(FeeRange.builder()
-                        .min(10L)
-                        .max(1000L)
-                        .build())
+                .rangeAmount(validRange)
                 .build();
+
         PaymentMethod cart = PaymentMethod.builder()
                 .paymentMethodId("CART")
                 .name(Map.of(Language.IT, "Carte", Language.EN, "Cards"))
@@ -513,14 +599,30 @@ class PaymentMethodsServiceTest {
                 .paymentMethodTypes(List.of(PaymentMethodType.CARTE))
                 .target(null)
                 .validityDateFrom(LocalDate.now().minusDays(1))
-                .rangeAmount(FeeRange.builder()
-                        .min(20L)
-                        .max(1000L)
-                        .build())
+                .rangeAmount(validRange)
                 .build();
+
         return List.of(paypal, google, banca, cart);
     }
 
+    private static ValidBundle bundleForPaymentType(String paymentType) {
+        return ValidBundle.builder()
+                .id("bundle-" + paymentType)
+                .idPsp("PSP1")
+                .paymentType(paymentType)
+                .touchpoint("CHECKOUT")
+                .paymentAmount(10L)
+                .minPaymentAmount(0L)
+                .maxPaymentAmount(1000L)
+                .build();
+    }
 
-
+    private static List<ValidBundle> allBundlesForSorting() {
+        return List.of(
+                bundleForPaymentType("PPAL"),
+                bundleForPaymentType("GOOG"),
+                bundleForPaymentType("RBPS"),
+                bundleForPaymentType("CP")
+        );
+    }
 }
